[gd_scene load_steps=17 format=3 uid="uid://bookvowkwj8xm"]

[ext_resource type="Script" path="res://windows/gifts/gift.gd" id="1_jvqkr"]
[ext_resource type="Texture2D" uid="uid://ds52iu25so7kc" path="res://assets/gifts/gifts/gifts.png" id="2_ps88k"]
[ext_resource type="FontFile" uid="uid://cveouj21bacwl" path="res://assets/fonts/Daniel-Black.otf" id="3_7dt7b"]
[ext_resource type="FontFile" uid="uid://xubed831mtc" path="res://assets/fonts/danielbd.ttf" id="4_voqot"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pcgfb"]
bg_color = Color(1, 1, 1, 0.960784)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_g35tk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(8, 122)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_kprrh"]
resource_name = "highlight"
length = 2.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.05, 1.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(8, 122), Vector2(2, 122)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0.756863)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Label:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ed36l"]
_data = {
"RESET": SubResource("Animation_g35tk"),
"highlight": SubResource("Animation_kprrh")
}

[sub_resource type="Animation" id="Animation_2tptf"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.653101, 0.443067, 0.830403, 0.847059)]
}

[sub_resource type="Animation" id="Animation_wxrjr"]
resource_name = "common"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.360784, 0.631373, 0.313726, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Item_Rarity_Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Common"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ProgressBar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.529412, 0, 1)]
}

[sub_resource type="Animation" id="Animation_blob0"]
resource_name = "epic"
length = 5.0
loop_mode = 1
step = 1.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Item_Rarity_Label:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Epic"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2, 3, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.52549, 0.32549, 0.992157, 1), Color(0.608225, 0.241787, 1, 0.847059), Color(0.703166, 0.26351, 1, 0.847059), Color(0.803922, 0.290196, 1, 0.956863), Color(0.563107, 0.324093, 0.764009, 0.847059)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ProgressBar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.270588, 0.992157, 0)]
}

[sub_resource type="Animation" id="Animation_7hw56"]
resource_name = "rare"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.243137, 0.572549, 0.866667, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Item_Rarity_Label:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Rare"]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ProgressBar:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0.270588, 0.992157, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1q22e"]
_data = {
"RESET": SubResource("Animation_2tptf"),
"common": SubResource("Animation_wxrjr"),
"epic": SubResource("Animation_blob0"),
"rare": SubResource("Animation_7hw56")
}

[sub_resource type="Animation" id="Animation_3ewxx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.5, 1.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Item_Information:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_1rjmk"]
resource_name = "in"
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1.5, 1.5), Vector2(1.6, 1.6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.881937, 0.881937, 0.881937, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Item_Information:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjroq"]
_data = {
"RESET": SubResource("Animation_3ewxx"),
"in": SubResource("Animation_1rjmk")
}

[node name="Gift" type="Node2D"]
script = ExtResource("1_jvqkr")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_ps88k")
hframes = 64
frame = 7

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0

[node name="Item_Information" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0)

[node name="Panel" type="Panel" parent="Item_Information"]
self_modulate = Color(0.653101, 0.443067, 0.830403, 0.847059)
offset_left = -176.0
offset_top = -228.0
offset_right = 177.0
offset_bottom = -67.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pcgfb")

[node name="Item_Name_Label" type="Label" parent="Item_Information/Panel"]
layout_mode = 0
offset_right = 353.0
offset_bottom = 62.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_7dt7b")
theme_override_font_sizes/font_size = 30
text = "Item Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item_Rarity_Label" type="Label" parent="Item_Information/Panel"]
layout_mode = 0
offset_left = -1.0
offset_top = 33.0
offset_right = 352.0
offset_bottom = 69.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_voqot")
theme_override_font_sizes/font_size = 15
text = "Common"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Item_Description_Label" type="Label" parent="Item_Information/Panel"]
layout_mode = 0
offset_left = 5.0
offset_top = 58.0
offset_right = 348.0
offset_bottom = 114.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_voqot")
theme_override_font_sizes/font_size = 20
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Trade_Requirements_Label" type="Label" parent="Item_Information/Panel"]
layout_mode = 0
offset_left = 176.0
offset_top = 107.0
offset_right = 348.0
offset_bottom = 154.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_voqot")
theme_override_font_sizes/font_size = 15
text = "x/y to trade"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="ProgressBar" type="ProgressBar" parent="Item_Information/Panel"]
modulate = Color(0, 0.529412, 0, 1)
layout_mode = 0
offset_left = 8.0
offset_top = 122.0
offset_right = 176.0
offset_bottom = 149.0
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="Item_Information/Panel/ProgressBar"]
libraries = {
"": SubResource("AnimationLibrary_ed36l")
}

[node name="Label" type="Label" parent="Item_Information/Panel/ProgressBar"]
visible = false
layout_mode = 0
offset_top = -1.0
offset_right = 168.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("4_voqot")
theme_override_font_sizes/font_size = 15
text = "Click to trade!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Item_Information/Panel"]
libraries = {
"": SubResource("AnimationLibrary_1q22e")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jjroq")
}

[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
